<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hearUs</string>
    <string name="main_activity">Search For an Issue</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bill_list_activity">List of Bills</string>
    <string name="title_activity_single">SingleActivity</string>
    <string name="vote_yay">Support</string>
    <string name="vote_nay">Oppose</string>

    <!-- Test Bill Data -->
    <string name="bill_title">Crime Gun Tracing Act of 2013</string>
    <string name="bill_date">2013-07-23</string>
    <string name="bill_description">Crime Gun Tracing Act of 2013 - Amends the Omnibus Crime Control and Safe Streets Act of 1968 to direct the Attorney General, in awarding public safety and community policing (COPS ON THE BEAT) grants, to give preferential consideration to an applicant that has reported all firearms recovered during the previous 12 months at a crime scene or during the course of a criminal investigation to the Bureau of Alcohol, Tobacco, Firearms, and Explosives (ATF), or to a state agency that reports such firearms to the Bureau, for the purpose of tracing.</string>
    <string name="bill_sponsor">Sen. Richard Durbin [D-IL]</string>
    <string name="title_activity_bill">BillActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_district">DistrictActivity</string>

</resources>
