<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 xmlns:tools="http://schemas.android.com/tools"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 tools:context="com.brandon.hearus.BillFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingTop="10dp"
			android:paddingBottom="10dp">

			<TextView
				android:id="@+id/bill_title"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/bill_title"/>

			<TextView
				android:id="@+id/bill_date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:text="@string/bill_date"/>
		</LinearLayout>

		<TextView
			android:id="@+id/bill_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="10dp"
			android:text="@string/bill_description"/>

		<TextView
			android:id="@+id/bill_sponsor"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:text="@string/bill_sponsor"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/vote_yay"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/vote_yay"/>

			<Button
				android:id="@+id/vote_nay"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/vote_nay"/>
		</LinearLayout>

	</LinearLayout>

</FrameLayout>
